"""
輸入生成基礎類別 - 通用版本
定義輸入生成的基本介面和共用功能
完全基於動態 ProtoSchema 分析
"""

import time
import uuid
import sys
import os
from abc import ABC, abstractmethod
from typing import List, Optional

# TODO: Set correct Proto path based on InputCommand.proto analysis
# TODO: Import Proto modules dynamically based on InputCommand.proto

class InputGenerator(ABC):
    """輸入生成器基礎類別"""
    
    def __init__(self):
        # TODO: 🔧 移除 proto_analyzer，直接使用固定的按鍵映射 - 來源: InputCommand_pb2.EInputKeyType 枚舉
        self.key_mapping = {}  # TODO: 🔧 從 Proto 靜態生成按鍵映射
        pass
        
    @abstractmethod
    def generate_input(self) -> Optional[bytes]:
        """生成輸入指令 - 抽象方法"""
        # TODO: 🔧 需要實作具體的輸入生成邏輯 - 來源: InputCommand_pb2
        # TODO: 🔧 需要根據 Proto 定義創建 InputCommand 物件 - 來源: key_inputs, is_key_down, timestamp
        pass
        
    def generate_key_input(self, keys: List[int], is_key_down: bool) -> bytes:
        """生成按鍵輸入指令"""
        # TODO: Create InputCommand object based on InputCommand.proto analysis
        # TODO: Find key input field name from InputCommand.proto (e.g., key_inputs)
        # TODO: Find key state field name from InputCommand.proto (e.g., is_key_down)
        # TODO: Check if timestamp field exists in InputCommand.proto and set if available
        # TODO: Call SerializeToString() method to return bytes
        return b""
        
    def generate_complex_input(self, digital_keys: List[int], is_key_down: bool, 
                             analog_inputs: Optional[List] = None) -> bytes:
        """生成複合輸入指令"""
        # TODO: Create digital input part based on InputCommand.proto
        # TODO: Set key_inputs, is_key_down, timestamp fields
        
        # TODO: Create complex input command based on InputCommand.proto
        # TODO: Check if ComplexInputCommand type exists in InputCommand.proto
        # TODO: If exists, create complex command and set digital_inputs field
        
        # TODO: Add analog inputs based on InputCommand.proto
        # TODO: Check if analog_inputs field exists in InputCommand.proto
        # TODO: If exists and analog_inputs parameter is not empty, add analog inputs
        
        # TODO: Set complex command timestamp based on InputCommand.proto
        # TODO: Check if complex command has timestamp field
        
        # TODO: Call SerializeToString() method to return bytes
        return b""
        
    def create_vr_input(self, vr_type: int, value: float) -> object:
        """創建VR輸入值"""
        # TODO: Create VR input object based on InputCommand.proto analysis
        # TODO: Analyze VR input message type in InputCommand.proto (e.g., VrInputValue)
        
        # TODO: Set VR input type field based on InputCommand.proto
        # TODO: Find VR type field name from InputCommand.proto (e.g., vr_type)
        
        # TODO: Set VR input value field based on InputCommand.proto
        # TODO: Find value field name from InputCommand.proto (e.g., value)
        
        # TODO: Set VR input timestamp based on InputCommand.proto
        # TODO: Check if timestamp field exists
        
        # TODO: Return created VR input object
        return None
        
    def get_key_name(self, key_value: int) -> str:
        """獲取按鍵名稱"""
        # TODO: Generate key name mapping based on InputCommand.proto enum
        # TODO: Analyze EInputKeyType enum in InputCommand.proto
        # TODO: Dynamically generate key_value -> key_name mapping dictionary
        # TODO: Return corresponding key name or default format f"KEY_{key_value}"
        return f"KEY_{key_value}"
        
    def log_input_generation(self, keys: List[int], input_type: str = "digital"):
        """記錄輸入生成"""
        # TODO: Generate input log using get_key_name() method
        # TODO: Format and output log message
        key_names = [self.get_key_name(key) for key in keys]
        print(f"📤 生成{input_type}輸入指令: [{', '.join(key_names)}]")
